# scikit-datasets

./: .buildinfo  .codeclimate.yml  .coveragerc  .editorconfig  .gitignore  .landscape.yml  .travis.yml  CITATION.cff  LICENSE  README.md  azure-pipelines.yml  conftest.py  environment.yml  experiments.ipynb  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  repositories.html  search.html  searchindex.js  setup.cfg  setup.py  structure.html  utils.html
.doctrees/: environment.pickle  index.doctree
_modules/: index.html
_sources/: index.rst.txt  repositories.rst.txt  structure.rst.txt
_static/: Makefile  conf.py  documentation_options.js  index.html  index.rst  make.bat  skdatasets.html  skdatasets.keel.html  skdatasets.keel.imbalanced.html  skdatasets.keel.imbalanced.rst  skdatasets.keel.rst  skdatasets.keel.standard_classification.html  skdatasets.libsvm.classification.html  skdatasets.libsvm.classification.rst  skdatasets.libsvm.classification_scale.html  skdatasets.libsvm.classification_test.html  skdatasets.libsvm.classification_test_remaining.html  skdatasets.libsvm.classification_test_scale.html  skdatasets.libsvm.classification_test_scale.rst  skdatasets.libsvm.classification_val_test.html  skdatasets.libsvm.html  skdatasets.libsvm.regression.html  skdatasets.libsvm.regression_test.html  skdatasets.micropyramid.html  skdatasets.micropyramid.rst  skdatasets.uci.classification.html  skdatasets.uci.classification_test.html  skdatasets.uci.html
autosummary/: skdatasets.repositories.aneurisk.fetch.html  skdatasets.repositories.cran.fetch_dataset.html  skdatasets.repositories.cran.fetch_package.html  skdatasets.repositories.forex.fetch.html  skdatasets.repositories.keel.fetch.html  skdatasets.repositories.keras.fetch.html  skdatasets.repositories.libsvm.fetch.html  skdatasets.repositories.raetsch.fetch.html  skdatasets.repositories.sklearn.fetch.html  skdatasets.repositories.uci.fetch.html  skdatasets.repositories.ucr.fetch.html  skdatasets.utils.estimator.json2estimator.html  skdatasets.utils.experiment.ScoresInfo.html  skdatasets.utils.experiment.create_experiments.html  skdatasets.utils.experiment.experiment.html  skdatasets.utils.experiment.fetch_scores.html  skdatasets.utils.experiment.run_experiments.html  (+2 more)
(+449 files in other folders)
