[aliases]
test=pytest

[tool:pytest]
addopts = --doctest-modules --cov=skdatasets

[metadata]
description_file = README.md

[darglint]
docstring_style = numpy

[isort]
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
combine_as_imports = 1

[mypy]
strict = True
strict_equality = True
implicit_reexport = True